[gd_scene load_steps=18 format=3 uid="uid://c7s5qia3dtyv1"]

[ext_resource type="Texture2D" uid="uid://b1fwdb7wh2oxr" path="res://Asset_Midterm/BG/Merchant Scene.jpg" id="1_6vjxl"]
[ext_resource type="Script" uid="uid://bpm2p8l2jywm" path="res://Script/store.gd" id="1_smv7e"]
[ext_resource type="Texture2D" uid="uid://cprtxbqccylxo" path="res://Asset_Midterm/BG/Blur Merchant.jpg" id="2_eci5q"]
[ext_resource type="Texture2D" uid="uid://b5xxgk6flterr" path="res://Asset_Midterm/Item/Pixel_potion_pack/hp_potion.png" id="3_smv7e"]
[ext_resource type="Texture2D" uid="uid://mfegd3bfkc1i" path="res://Asset_Midterm/Item/Pixel_potion_pack/defense_potion.png" id="4_ggf7m"]
[ext_resource type="FontFile" uid="uid://bdl4qpamcrivq" path="res://Fonts/OBGB.TTF" id="5_ggf7m"]
[ext_resource type="Texture2D" uid="uid://dkyfygbi0dekj" path="res://Asset_Midterm/UI/UI/Button_52x14.png" id="6_rx2v4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5oqxb"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_smv7e"]
texture = ExtResource("3_smv7e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ggf7m"]
texture = ExtResource("3_smv7e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rx2v4"]
texture = ExtResource("3_smv7e")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smv7e"]
bg_color = Color(0.509804, 0.396078, 0.243137, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggf7m"]
bg_color = Color(0.239216, 0.196078, 0.223529, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jbfhv"]
texture = ExtResource("6_rx2v4")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fpokj"]
texture = ExtResource("4_ggf7m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g6f18"]
texture = ExtResource("4_ggf7m")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mjr02"]
texture = ExtResource("4_ggf7m")

[node name="Store_1" type="Node2D"]
script = ExtResource("1_smv7e")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Default" type="TextureRect" parent="Control"]
material = SubResource("ShaderMaterial_5oqxb")
layout_mode = 0
offset_left = 21.0002
offset_top = 24.0001
offset_right = 2321.0
offset_bottom = 1323.0
scale = Vector2(0.847227, 0.830857)
texture = ExtResource("1_6vjxl")

[node name="Blur" type="TextureRect" parent="Control"]
visible = false
layout_mode = 0
offset_left = 26.0
offset_top = 28.0
offset_right = 4676.0
offset_bottom = 2607.0
scale = Vector2(0.418932, 0.419535)
texture = ExtResource("2_eci5q")

[node name="HP_Potion" type="Button" parent="Control"]
layout_mode = 0
offset_left = 563.0
offset_top = 565.0
offset_right = 847.0
offset_bottom = 849.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_smv7e")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ggf7m")
theme_override_styles/normal = SubResource("StyleBoxTexture_rx2v4")

[node name="Camera2D" type="Camera2D" parent="Control/HP_Potion"]
position = Vector2(-35, 147)
enabled = false
zoom = Vector2(2.5, 2.5)
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="Panel" type="Panel" parent="Control/HP_Potion"]
visible = false
layout_mode = 0
offset_left = -362.0
offset_top = 21.0
offset_right = -31.0
offset_bottom = 245.0
theme_override_styles/panel = SubResource("StyleBoxFlat_smv7e")

[node name="Info" type="Panel" parent="Control/HP_Potion/Panel"]
modulate = Color(0.901961, 0.905882, 0.909804, 1)
layout_mode = 0
offset_left = 9.0
offset_top = 9.0
offset_right = 321.0
offset_bottom = 216.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ggf7m")

[node name="Name" type="Label" parent="Control/HP_Potion/Panel"]
modulate = Color(0.698039, 0.698039, 0.698039, 1)
layout_mode = 0
offset_left = 23.0
offset_top = 18.0
offset_right = 63.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("5_ggf7m")
text = "Healing Potion"

[node name="Info_des" type="Label" parent="Control/HP_Potion/Panel"]
layout_mode = 0
offset_left = 26.0
offset_top = 47.0
offset_right = 310.0
offset_bottom = 206.0
theme_override_fonts/font = ExtResource("5_ggf7m")

[node name="Hp_Buy" type="Button" parent="Control/HP_Potion/Panel"]
modulate = Color(0.666667, 0.666667, 0.666667, 1)
layout_mode = 0
offset_left = 162.0
offset_top = 233.0
offset_right = 333.0
offset_bottom = 277.0
theme_override_styles/normal = SubResource("StyleBoxTexture_jbfhv")

[node name="Label" type="Label" parent="Control/HP_Potion/Panel/Hp_Buy"]
layout_mode = 0
offset_left = 48.0
offset_top = 11.0
offset_right = 157.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("5_ggf7m")
text = "100 BUY"

[node name="Label2" type="Label" parent="Control/HP_Potion/Panel/Hp_Buy"]
layout_mode = 0
offset_left = 86.0
offset_top = 3.0
offset_right = 129.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 22
text = "|"
metadata/_edit_lock_ = true

[node name="Max_HP_Potion" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1175.0
offset_top = 559.0
offset_right = 1459.0
offset_bottom = 843.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_fpokj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_g6f18")
theme_override_styles/normal = SubResource("StyleBoxTexture_mjr02")

[node name="Camera2D" type="Camera2D" parent="Control/Max_HP_Potion"]
position = Vector2(328, 148)
enabled = false
zoom = Vector2(2.5, 2.5)

[node name="Exit" type="Button" parent="Control"]
layout_mode = 0
offset_left = 56.0
offset_top = 53.0
offset_right = 190.0
offset_bottom = 187.0

[connection signal="pressed" from="Control/HP_Potion" to="." method="_on_hp_potion_pressed"]
[connection signal="pressed" from="Control/HP_Potion/Panel/Hp_Buy" to="." method="_on_hp_buy_pressed"]
[connection signal="pressed" from="Control/Max_HP_Potion" to="." method="_on_max_hp_potion_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_exit_pressed"]
